# docs/swagger.json
@@ -54,8 +54,11 @@
                 "code": {
                     "type": "integer"
                 },
+                "dbResponseTime": {
+                    "type": "integer"
+                },
                 "responseTime": {
-                    "type": "string"
+                    "type": "integer"
                 }
             }
         }
