# internal/app/api/models/health.go
@@ -1,6 +1,7 @@
 package models
 
 type Health struct {
-	Code         int
-	ResponseTime string
+	Code           int
+	ResponseTime   int64
+	DbResponseTime int64
 }
